finished projeto 1 (front end[html-css])

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
 <h1>"Olá batata 4"</h1>
-</body>
+<div>
+    <img src="bocchi-mcdonalds-pfp-v0-odbsxjbdkwea1.webp" alt="">
+</div>
+<div class="expl"><p>Bocchi the Rock! é uma série de mangá japonesa de quatro quadros escrita e ilustrada por Aki Hamaji, publicada pela Houbunsha na revista de 
+    mangá seinen Manga Time Kirara Max desde dezembro de 2017.
+     Foi organizada em sete volumes tankōbon em outubro de 2024</p></div>
+<div class="bt"><p>Pão de queijo</p></div>
 </html>
